--- a/lambdatimes/package.json
+++ b/lambdatimes/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4",
-    "styled-components": "^3.3.3"
+    "reactstrap": "^7.1.0",
+    "save": "^2.3.3",
+    "styled-components": "^3.4.10"
   },
   "scripts": {
     "start": "react-scripts start",
